[gd_scene load_steps=6 format=3 uid="uid://dfnxf7o85qqtf"]

[ext_resource type="Script" path="res://addons/optiscene/element_row.gd" id="1_f3ydu"]
[ext_resource type="Script" path="res://addons/optiscene/multimesh_converter.gd" id="1_v3kak"]

[sub_resource type="LabelSettings" id="LabelSettings_e2owh"]
font_color = Color(0.917167, 1, 0.29, 1)

[sub_resource type="World3D" id="World3D_y6lay"]

[sub_resource type="PrismMesh" id="PrismMesh_b4pr2"]

[node name="MultimeshConverter" type="Window"]
initial_position = 1
size = Vector2i(610, 610)
script = ExtResource("1_v3kak")

[node name="PanelCon" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Internals" type="VBoxContainer" parent="PanelCon"]
unique_name_in_owner = true
layout_mode = 2

[node name="TopOptions" type="MarginContainer" parent="PanelCon/Internals"]
layout_mode = 2
theme_override_constants/margin_top = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelCon/Internals/TopOptions"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="PanelCon/Internals/TopOptions/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "Once combined, meshes can't be seperated anymore"
label_settings = SubResource("LabelSettings_e2owh")

[node name="MainList" type="MarginContainer" parent="PanelCon/Internals"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelCon/Internals/MainList"]
layout_mode = 2
size_flags_vertical = 3

[node name="ElementSample" type="MarginContainer" parent="PanelCon/Internals/MainList/PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_f3ydu")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelCon/Internals/MainList/PanelContainer/ElementSample"]
layout_mode = 2

[node name="ViewportCon" type="SubViewportContainer" parent="PanelCon/Internals/MainList/PanelContainer/ElementSample/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="PanelCon/Internals/MainList/PanelContainer/ElementSample/HBoxContainer/ViewportCon"]
world_3d = SubResource("World3D_y6lay")
transparent_bg = true
handle_input_locally = false
size = Vector2i(200, 150)
render_target_update_mode = 0

[node name="Node3D" type="Node3D" parent="PanelCon/Internals/MainList/PanelContainer/ElementSample/HBoxContainer/ViewportCon/SubViewport"]

[node name="Camera3D" type="Camera3D" parent="PanelCon/Internals/MainList/PanelContainer/ElementSample/HBoxContainer/ViewportCon/SubViewport/Node3D"]
transform = Transform3D(0.707107, -0.353553, 0.612372, 0, 0.866025, 0.5, -0.707107, -0.353553, 0.612372, 3, 3, 3)
projection = 1
size = 4.333

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="PanelCon/Internals/MainList/PanelContainer/ElementSample/HBoxContainer/ViewportCon/SubViewport/Node3D"]
transform = Transform3D(0.881748, -0.333556, 0.333556, 0, 0.707107, 0.707107, -0.47172, -0.62349, 0.62349, 0, 2, 0)
light_energy = 1.87

[node name="MeshInstance" type="MeshInstance3D" parent="PanelCon/Internals/MainList/PanelContainer/ElementSample/HBoxContainer/ViewportCon/SubViewport/Node3D"]
mesh = SubResource("PrismMesh_b4pr2")

[node name="Amount" type="Label" parent="PanelCon/Internals/MainList/PanelContainer/ElementSample/HBoxContainer"]
layout_mode = 2
text = "Amount: "

[node name="VBoxContainer" type="VBoxContainer" parent="PanelCon/Internals/MainList/PanelContainer/ElementSample/HBoxContainer"]
layout_mode = 2

[node name="Combine" type="CheckButton" parent="PanelCon/Internals/MainList/PanelContainer/ElementSample/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Combine"
alignment = 1

[node name="ActionExplanation" type="Label" parent="PanelCon/Internals/MainList/PanelContainer/ElementSample/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 6
text = "Keep Meshes seperate"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Scroller" type="ScrollContainer" parent="PanelCon/Internals/MainList/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Elements" type="VBoxContainer" parent="PanelCon/Internals/MainList/PanelContainer/Scroller"]
unique_name_in_owner = true
layout_mode = 2

[node name="CombinableMessage" type="Label" parent="PanelCon/Internals/MainList/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "No combinable MeshInstance3Ds found in your scene!

Make sure that some of your MeshInstance3Ds use the same Mesh Resource!"
label_settings = SubResource("LabelSettings_e2owh")
horizontal_alignment = 1

[node name="BottomButtons" type="MarginContainer" parent="PanelCon/Internals"]
layout_mode = 2
theme_override_constants/margin_top = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelCon/Internals/BottomButtons"]
layout_mode = 2
size_flags_vertical = 8

[node name="Cancel" type="Button" parent="PanelCon/Internals/BottomButtons/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "Cancel"

[node name="Finished" type="Button" parent="PanelCon/Internals/BottomButtons/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
disabled = true
text = "Combine"
